--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
   <body>
+
+    {% include header.html %}
+
     {{ content }}
+    
   </body>
 </html>
