--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
   <body>
+
+    {% include header.html %}
+
     {{ content }}
+
+    {% include footer.html %}
+    
   </body>
 </html>
