--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,17 +11,9 @@
       {% endif %}
     </a>
     <!-- Menu Button -->
-    <!-- <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navigation"
-      aria-controls="navigation"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
+    <button type="button">
+      <span></span>
+    </button>
 
     <div>
       <ul>
