--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,10 +1,21 @@
-$backgroundColor: #ffffff;
-$bodyColor: #000000;
-$bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-  sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+@import "variables";
 
-body {
-  background: $backgroundColor;
-  color: $bodyColor;
-  font-family: $bodyFont;
-}
+@import "mixins";
+
+@import "typography";
+
+@import "buttons";
+
+@import "common";
+
+@import "templates/navigation";
+
+@import "templates/hero-area";
+
+@import "templates/homepage";
+
+@import "templates/blog";
+
+@import "templates/about";
+
+@import "templates/portfolio";
