--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,21 +1,7 @@
 @import "variables";
 
-@import "mixins";
+@import "commons";
 
 @import "typography";
 
-@import "buttons";
-
-@import "common";
-
 @import "templates/navigation";
-
-@import "templates/hero-area";
-
-@import "templates/homepage";
-
-@import "templates/blog";
-
-@import "templates/about";
-
-@import "templates/portfolio";
