--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,14 +15,14 @@
       <span></span>
     </button>
 
-    <div>
+    <div class="menu_wrapper">
       <ul>
         <li>
-          <a href="{{ site.baseurl }}/">Home</a>
+          <a class="nav_link" href="{{ site.baseurl }}/">Home</a>
         </li>
         {% for link in site.data.settings.menu %}
         <li>
-          <a href="{{ link.link }}">{{ link.name }}</a>
+          <a class="nav_link" href="{{ link.link }}">{{ link.name }}</a>
         </li>
         {% endfor %}
       </ul>
