--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,69 +1,47 @@
 /*  typography */
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:700|Roboto:400");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 body {
   line-height: 1.2;
   font-family: $primary-font;
   -webkit-font-smoothing: antialiased;
-  font-size: 15px;
+  font-size: 16px;
   color: $text-color;
 }
 
-p,
-.paragraph {
-  font-weight: 400;
-  color: $text-color;
-  font-size: 15px;
+p {
   line-height: 1.8;
   font-family: $primary-font;
-  &-lg {
-    font-size: 22px;
-  }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: $text-color-dark;
-  font-family: $secondary-font;
-  line-height: 1.2;
+a {
+  color: $text-color;
+  text-decoration: none;
+}
+:visited {
+  text-decoration: dashed;
 }
 
-h1,
-.h1 {
+h1 {
   font-size: 80px;
-  @include desktop {
-    font-size: 65px;
-  }
 }
 
-h2,
-.h2 {
-  font-size: 60px;
-  @include desktop {
-    font-size: 50px;
-  }
+h2 {
+  font-size: 64px;
 }
 
-h3,
-.h3 {
+h3 {
   font-size: 40px;
 }
 
-h4,
-.h4 {
-  font-size: 22px;
+h4 {
+  font-size: 24px;
 }
 
-h5,
-.h5 {
-  font-size: 18px;
+h5 {
+  font-size: 20px;
 }
 
-h6,
-.h6 {
-  font-size: 14px;
+h6 {
+  font-size: 16px;
 }
