--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,12 @@
     <a href="{{ site.baseurl }}/">
       {% if site.data.settings.logo %}
       <img
+        class="logo"
         src="{{ site.data.settings.logo | absolute_url }}"
         alt="{{ site.data.settings.title }}"
       />
       {% else if %}
-      <h3 class="text-white font-tertiary">{{site.data.settings.title}}</h3>
+      <h3>{{site.data.settings.title}}</h3>
       {% endif %}
     </a>
     <!-- Menu Button -->
