--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,7 @@
 // Color Variables
 $bg-color: rgb(255, 250, 240);
 $text-color: rgb(19, 19, 19);
+$shade: rgba(19, 19, 19, 0.25);
 
 //Spacings and Margins
 $spa-8: 8px;
