--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,21 +12,17 @@
       {% endif %}
     </a>
     <!-- Menu Button -->
-    <button type="button">
-      <span></span>
-    </button>
+    <i class="hamburguer"></i>
 
-    <div class="menu_wrapper">
-      <ul>
-        <li>
-          <a class="nav_link" href="{{ site.baseurl }}/">Home</a>
-        </li>
-        {% for link in site.data.settings.menu %}
-        <li>
-          <a class="nav_link" href="{{ link.link }}">{{ link.name }}</a>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
+    <ul class="closed menu_wrapper">
+      <li>
+        <a class="nav_link" href="{{ site.baseurl }}/">Home</a>
+      </li>
+      {% for link in site.data.settings.menu %}
+      <li>
+        <a class="nav_link" href="{{ link.link }}">{{ link.name }}</a>
+      </li>
+      {% endfor %}
+    </ul>
   </nav>
 </header>
