--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     {{ content }}
 
     {% include footer.html %}
-    
+  
+  <script src="../assets/js/hamburguer.js"></script>
   </body>
 </html>
