--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@
     {{ content }}
 
     {% include footer.html %}
-    
+
+    <script src="../assets/js/hamburguer.js"></script>
   </body>
 </html>
