--- a/_sass/templates/_navigation.scss
+++ b/_sass/templates/_navigation.scss
@@ -1,6 +1,7 @@
 header {
   position: sticky;
   top: 0;
+  background-color: $bg-color;
 }
 
 nav {
@@ -9,15 +10,43 @@ nav {
   justify-content: space-between;
 }
 
-nav button {
-  display: none;
+.hamburguer {
+  width: $mar-40;
+  height: $mar-40;
+  background: red;
+  z-index: 9;
 }
 
-/* .menu_wrapper {
+.menu_wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  flex-flow: column nowrap;
+  width: 100%;
+}
 
-} */
+.closed {
+  display: none;
+}
 
 nav ul {
   display: flex;
   flex-flow: row nowrap;
+  padding: 0;
+}
+
+@media screen and (min-width: 480px) {
+  .hamburguer {
+    display: none;
+  }
+
+  .menu_wrapper {
+    position: static;
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap;
+    width: auto;
+  }
 }
