--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,13 +1,10 @@
 <section class="hero">
-  <div>
-    <h1>Hello. My name is Tomás Santos.</h1>
+  <div class="text_wrapper">
+    <h1>I’m Tomás Santos, 22 year old product designer from Lisbon.</h1>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempora, sed
-      numquam maxime asperiores aliquam ipsa libero explicabo molestias iure,
-      tempore quia beatae officia quisquam officiis delectus, eos facere sequi.
+      I’m of the opinion that our knowledge of the world has no value, except
+      when we act to transform it.
     </p>
   </div>
-  <figure>
-    <img src="" alt="" />
-  </figure>
+  <img src="/assets/images/hero.jpg" alt="" />
 </section>
