--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,5 +14,8 @@ $mar-24: 2rem;
 $mar-32: 3rem;
 $mar-40: 4rem;
 
+$nav_height: 5rem;
+$img_border: 4px;
+
 // Font Variables
 $primary-font: "Poppins", sans-serif;
