--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,39 +1,12 @@
 <footer>
-  <div>
-    <h2>Contact Form</h4>
-    <form>
-      <div>
-        <input type="text" id="name" name="name" placeholder="Full Name" />
-      </div>
-      <div>
-        <input
-          type="email"
-          id="email"
-          name="_replyto"
-          placeholder="Email Address"
-        />
-      </div>
-      <div>
-        <textarea
-          name="message"
-          id="message"
-          placeholder="Type Message Here"
-        ></textarea>
-      </div>
-      <div>
-        <button type="submit">send</button>
-      </div>
-    </form>
-  </div>
-  <div>
-    <h2>Social Media</h2>
-    <ul>
-      <li>
-        <a href="">Instagram</a>
-      </li>
-      <li>
-        <a href="">LinkedIn</a>
-      </li>
-    </ul>
-  </div>
+  <a href="/about">Copywright® Tomás Santos</a>
+  <img class="logo_footer" src="/assets/images/{{ site.data.settings.logo }}" />
+  <a id="backtotop">Back to Top ↑</a>
 </footer>
+
+<script>
+  const backtotop = document.getElementById("backtotop");
+  backtotop.addEventListener("click", () =>
+    window.scrollTo({ top: 0, left: 0, behavior: "smooth" })
+  );
+</script>
