--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,12 @@
 
     {% include header.html %}
 
-    {{ content }}
+    <article>
+      <section class="post_hero">
+        <h1>{{ page.title }}</h1>
+      </section>
+      {{ content }}
+    </article>
 
     {% include footer.html %}
     
