About and Contacts page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       {% endif %}
     </a>
     <!-- Menu Button -->
-    <i class="hamburguer"></i>
+    <img class="hamburguer" src="/assets/images/hamburger.svg" />
 
     <ul class="closed menu_wrapper">
       <li>
