--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@
 
     <article>
       <section class="post_hero">
+        <img src="{{ site.posts.image }}" alt="">
         <h1>{{ page.title }}</h1>
       </section>
       {{ content }}
