--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,3 +21,7 @@ $img_border: 4px;
 
 // Font Variables
 $primary-font: "Poppins", sans-serif;
+
+// Border
+$img_border: 4px;
+$border: $img_border solid $text-color;
