--- a/_sass/_commons.scss
+++ b/_sass/_commons.scss
@@ -14,6 +14,12 @@ ol {
   list-style: none;
 }
 
+blockquote {
+  @extend p;
+  font-style: italic;
+  margin-left: $spa-16;
+}
+
 img {
   object-fit: cover;
   width: 100%;
@@ -87,6 +93,10 @@ footer {
 }
 
 @media screen and (min-width: 600px) {
+  blockquote {
+    margin-left: $mar-16;
+  }
+
   .portfolio {
     display: grid;
     grid-template-columns: 1fr 1fr;
