--- a/_sass/templates/_posts.scss
+++ b/_sass/templates/_posts.scss
@@ -6,6 +6,15 @@
   height: auto;
 }
 
+.page_post {
+  max-width: 1114px;
+  margin: $spa-16;
+}
+
+.page_post img {
+  margin-bottom: $spa-24;
+}
+
 @media screen and (min-width: 600px) {
   .thumb {
     height: 70%;
@@ -13,5 +22,14 @@
 
   .post_description {
     height: 30%;
+  }
+
+  .page_post {
+    width: 80%;
+    margin: auto;
+  }
+
+  .page_post img {
+    margin-bottom: $spa-24;
   }
 }
