--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,8 +6,12 @@
 
 @import "buttons";
 
+@import "animation";
+
 @import "templates/navigation";
 
 @import "templates/posts";
 
 @import "templates/hero";
+
+@import "templates/contact";
