--- a/_sass/templates/_posts.scss
+++ b/_sass/templates/_posts.scss
@@ -1,3 +1,20 @@
+.portfolio {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto, 1fr);
+  gap: $spa-40;
+  margin: $spa-24;
+}
+
+.portfolio_heading {
+  margin: $spa-24;
+}
+
+.article_post {
+  width: 100%;
+  height: 100%;
+}
+
 .thumb {
   height: none;
 }
@@ -15,13 +32,24 @@
 .page_post {
   max-width: 1114px;
   margin: $spa-16;
-}
 
-.page_post img {
-  margin-bottom: $spa-24;
+  img {
+    margin-bottom: $spa-24;
+  }
 }
 
 @media screen and (min-width: 600px) {
+  .portfolio {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: $mar-40;
+    margin: $mar-40;
+  }
+
+  .portfolio_heading {
+    margin: $mar-24;
+  }
+
   .thumb {
     height: 70%;
   }
